--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="white">#ffffff</color>
     <color name="newpink">#ed074c</color>
     <color name="darkblack">#141414</color>
+    <color name = "palegreen">#90ee02</color>
 
 
 </resources>
