--- a/app/src/main/res/drawable/sign_up.xml
+++ b/app/src/main/res/drawable/sign_up.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 <stroke android:width="2dp"
-    android:color="#ed074c"></stroke>
-    <corners android:radius="20dp"/>
+    android:color="#75e900"></stroke>
+    <corners android:radius="30dp"/>
 </shape>
