--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_width="@dimen/oneeighty"
         android:layout_height="@dimen/oneeighty"
         android:layout_centerInParent="true"
-        android:src="@drawable/loginimage" />
+        android:contentDescription="TODO" android:src="@drawable/loginimage" />
 
     <LinearLayout
         android:layout_width="wrap_content"
