--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#75e900</color>
     <color name="logoOne">#AFB3B6</color>
     <color name="logoTwo">#1E65A5</color>
     <color name="richBlack">#000000</color>
